After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704702 - details panel doesn't show disk information if there's no /etc/fstab
details panel doesn't show disk information if there's no /etc/fstab
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-22 19:15 UTC by Jonh Wendell
Modified: 2017-04-29 12:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (1.78 KB, patch)
2013-07-22 19:23 UTC, Jonh Wendell
committed Details | Review

Description Jonh Wendell 2013-07-22 19:15:11 UTC
it shows '0 bytes'.
Comment 1 Jonh Wendell 2013-07-22 19:23:35 UTC
Created attachment 249834 [details] [review]
proposed patch

the g_unix_mount_points_get() function checks for entry mount
points. if there are none, it returns NULL and we end up showing
no information about disks.

if that's the case, this patch calls g_unix_mounts_get() which
checks for mounted filesystems in /etc/mtab.

also we need to update the list of ignored filesystems to
include rootfs, which is always present and is a duplicate of
an actual filesystem mount point.
Comment 2 Bastien Nocera 2013-07-23 08:49:45 UTC
Review of attachment 249834 [details] [review]:

Looks good, please push to gnome-3-8 and master
Comment 3 Jonh Wendell 2013-07-23 12:08:34 UTC
pushed, thanks.
Comment 4 Bastien Nocera 2017-04-29 12:30:25 UTC
Backported a portion of this to g-s-d.

commit c80b2c4128be119cf17fd9b00af99f6f1a1a3f41
Author: Jonh Wendell <jonh.wendell@intel.com>
Date:   Mon Jul 22 16:15:57 2013 -0300

    housekeeping: Add rootfs to the list of ignored filesystems
    
    Update the list of ignored filesystems to include rootfs
    include rootfs, which is always present and is a duplicate of
    an actual filesystem mount point.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=704702