info: show disk info even if there's no /etc/fstab file

the g_unix_mount_points_get() function checks for entry mount
points. if there are none, it returns NULL and we end up showing
no information about disks.

if that's the case, this patch calls g_unix_mounts_get() which
checks for mounted filesystems in /etc/mtab.

also we need to update the list of ignored filesystems to
include rootfs, which is always present and is a duplicate of
an actual filesystem mount point.

https://bugzilla.gnome.org/show_bug.cgi?id=704702